# hand_test

./: README.md  Verification_records.txt  package.xml
moveit_config/: crane_x7.srdf  crane_x7_planning.srdf
record/: Verification_records.txt  note.txt
scripts/: inspection.py  myprogram.py  pose_groupstate_example.py  test.py
